# cap-augmentation

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
dataset/: __init__.py
dataset/cityscapes/: config.py
dataset/vb/: config.py  generate_analytics.py  generate_dataset.py
dataset_tools/cityscapes/: __init__.py  config.py  download_dataset.py  filter_dataset.py  generate_dataset.py  run.sh
dataset_tools/vinbig/: __init__.py  config.py  generate_analytics.py  generate_dataset.py
examples/notebooks/: bev_and_pedestrians_demo.ipynb  test_generation.ipynb  test_generation_vbd.ipynb  vinbig_demo.ipynb
src/cap_augmentation/: __init__.py  blending.py  cap_aug.py  utils.py
src/cap_augmentation/bev/: __init__.py  bev_transform.py  config.py  default_calibration.yaml
src/cap_augmentation/wrappers/: __init__.py  albu.py  albumentations.py  generic.py  image_mask_transform.py  torchvision.py  tv.py
tests/: conftest.py  test_bev.py  test_blending.py  test_cap_aug.py  test_dataset_cityscapes.py  test_dataset_scripts.py  test_dataset_vinbig.py  test_notebooks.py  test_utils.py  test_wrappers.py
