[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cap-augmentation"
version = "0.2.3"
description = "Cut-and-paste augmentation for detection and segmentation datasets"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "RocketFlash" }
]
keywords = [
    "augmentation",
    "data-augmentation",
    "copy-paste",
    "cut-and-paste",
    "object-detection",
    "instance-segmentation",
    "semantic-segmentation",
    "computer-vision",
    "image-processing",
    "bird-eye-view",
    "bev",
    "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "opencv-python",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/RocketFlash/cap-augmentation"
Repository = "https://github.com/RocketFlash/cap-augmentation"
Issues = "https://github.com/RocketFlash/cap-augmentation/issues"
Changelog = "https://github.com/RocketFlash/cap-augmentation/blob/main/CHANGELOG.md"

[project.optional-dependencies]
albumentations = [
    "albumentations>=2.0.8,<3",
]
dataset = [
    "easydict",
    "matplotlib",
    "pandas",
    "scipy",
    "tqdm",
]
histogram = [
    "scikit-image>=0.19",
]
test = [
    "albumentations>=2.0.8,<3",
    "black>=24",
    "easydict",
    "matplotlib",
    "pandas",
    "pytest>=8",
    "ruff>=0.6",
    "scikit-image>=0.19",
    "scipy",
    "tqdm",
]
torchvision = [
    "torch>=2",
    "torchvision>=0.17",
]
viz = [
    "matplotlib",
]
all = [
    "albumentations>=2.0.8,<3",
    "black>=24",
    "easydict",
    "matplotlib",
    "pandas",
    "ruff>=0.6",
    "scikit-image>=0.19",
    "scipy",
    "torch>=2",
    "torchvision>=0.17",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cap_augmentation*"]

[tool.setuptools.package-data]
"cap_augmentation.bev" = ["default_calibration.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:capture"
pythonpath = ["src", "."]

[tool.black]
target-version = ["py39"]
include = '\.py$'

[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = ["examples"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes (unused imports, undefined names)
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade (modernization)
]
ignore = [
    "E501",  # line too long — Black handles wrapping
    "E741",  # ambiguous variable name — collides with conventional math/CV names
]

[tool.ruff.lint.per-file-ignores]
# Dataset scripts mix Python data definitions with imperative blocks at module
# level; the upstream-author style differs from the library code and we don't
# want to churn it in this refactor.
"dataset_tools/**" = ["B007", "E402"]
